2006-07-28 Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/logging/LoggingService.cpp, src/services/logging/LoggingService.h: added logging of doubles and size_t values
	* src/components/ogre/TerrainGenerator.cpp, src/components/ogre/TerrainGenerator.h: make more sure the world is initialized to more sane values
	* src/components/ogre/TerrainShader.cpp: more correct logging

2006-07-26 Erik Hjortsberg  <erik@katastrof.nu>
	
	* src/framework/IGameView.h: added missing file
	* ember.in: removed "games"
	
2006-07-24 Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: default to showing more fog

2006-07-24 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/OgreSetup.cpp: try to catch an error if the Cg plugin can't be loaded, and then just continue (since it not being there won't break anything)
	
2006-07-24 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/modeldefinitions/vehicles.modeldef: fixed non-parseable characters (though I never found out exactly what it was)
	
2006-07-24 Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/creatures.material: added male materials
	* src/components/ogre/model/Model.cpp, src/components/ogre/model/SubModelPart.cpp, src/components/ogre/model/SubModelPart.h, src/components/ogre/model/XMLModelDefinitionSerializer.cpp: changed the way submodel parts are stored so that it's now possible to define many parts using the same submesh but with different materials (such as "pants/green" and "pants/yellow"). This was intended in the original design, but was never fully implemented. Also added some better debug output. Next thing to do is to add support for "groups", so that parts that are mutually exclusive can be grouped together.
	* src/components/ogre/jesus/XMLJesusSerializer.cpp: better error output

2006-07-22 Erik Hjortsberg  <erik@katastrof.nu>
