@@ -11,3 +11,4 @@ install-sh
 libtool
 ltmain.sh
 missing
+var
