@@ -1,3 +1,12 @@
+2006-08-01 Erik Hjortsberg  <erik@katastrof.nu>
+
+	* ember.bin: 
+		* Add support for gcj-compiled wfut.
+		* Write the version number to a file, so that we might use if for something useful in the future
+	* .cvsignore: added "var" to ignored dirs
+	* ember.dox.in: fixed name
+	* Ember.kdevelop: updated project file
+
 2006-07-28 Erik Hjortsberg  <erik@katastrof.nu>
 
 	* src/services/logging/LoggingService.cpp, src/services/logging/LoggingService.h: added logging of doubles and size_t values
